# claude-session-manager

./: .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/.claude/: settings.json
.claude/.claude/agents/: requirement-analyst.md  test-engineer.md
.claude/.claude/commands/: architecture.md  around-the-world.md  audit-converge.md  audit-fix.md  autopilot.md  code-review.md  cross-validate.md  debug.md  demo.md  disk-cleanup.md  explore.md  git-analyze.md  git-extract.md  git-merge.md  handoff.md  parallel-develop.md  review-dialogue.md  s0-prepare.md  s0-understand.md  s1-analyze.md  s2-spec-review.md  s3-plan.md  s4-implement.md  s5-review.md  s6-manual-test.md  s6-test.md  s7-commit.md  scope.md  spec-audit.md  spec-converge.md  spec-review.md  suggest.md  verify.md
.claude/.claude/hooks/: context-guard.sh  session-monitor.sh  sop-compact-reminder.sh  strategic-compact.sh
.claude/.claude/references/: conductor-protocol.md  sop-rules.md
.claude/commands/: iterate.md
.github/workflows/: ci.yml
dev/: iterate-history.json
dev/knowledge/: pitfalls.md
dev/logs/: codex-review.jsonl
docs/: wave0_cli_findings.md
scripts/: cli_pipe_test.py
src/csm/: __init__.py  __main__.py  app.py
tests/: test_ansi.py  test_app.py  test_auto_compact.py  test_command_dispatcher.py  test_cost_model.py  test_detail_panel.py  test_integration.py  test_modals.py  test_new_features.py  test_output_parser.py  test_persistence.py  test_ring_buffer.py  test_session_list.py  test_session_manager.py  test_session_model.py  test_v07_features.py
(+36 files in other folders)
